# data-engineering-mini-projects

./: .gitignore  .gitpod.yml  README.md
mini-porjects/01-simple-streaming-visualization/: README.md
mini-porjects/01-simple-streaming-visualization/alarms_generator_script/: generate_alarms.py  requirements.txt
mini-porjects/01-simple-streaming-visualization/pinot/: table-config-alarms.json
mini-porjects/01-streaming-visualization/: .gitignore  README.md  compose.yaml
mini-porjects/01-streaming-visualization/alarms_generator_script/: generate_alarms.py
mini-porjects/01-streaming-visualization/diagrams/: .$streaming-visualization.drawio.bkp  streaming-visualization.drawio
mini-porjects/01-streaming-visualization/pinot/: schema-alarms.json
mini-porjects/01-streaming-visualization/superset-local/: docker-compose-image-tag.yml
mini-porjects/01-upsert-with-hive-and-spark/: compose.yaml
mini-porjects/02-postgresql-cdc-example/: compose.yaml  db-changes-demo.sql  init.sh  read_cdc.py  references.md  requirements.txt
mini-porjects/02-postgresql-to-mariadb-replication-with-cdc/: .env  README.md  compose.yaml  references.md  requirements.txt
mini-porjects/03-medallion-architecture/: compose.yaml  demo.py  read_hdfs.py
mini-porjects/03-medallion-architecture-with-spark-and-hadoop/: README.md  compose.yaml  requirements.txt
mini-porjects/04-data-modeling-with-rust/: README.md  compose.yaml
mini-porjects/04-data-modeling-with-rust/rust-pipeline/: .env  Cargo.toml
mini-porjects/04-data-modeling-with-rust/rust-pipeline/src/: main.rs
(+48 files in other folders)
