[package]
name = "rust-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "time", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
duckdb = { version = "1.0.0", features = ["bundled"] }
